[package]
name = "Scale"
version = "0.1.0"
edition = "2021"
authors = ["Chord"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
object = "0.37.0"
anyhow = "1"
thiserror = "2"
lazy-regex = "3"
tracing = "0.1"
tracing-subscriber = {version = "0",features = ["local-time"]}
clap  = {version = "4.5", features = ["derive"]}
rand = "0.9.0"
[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = ["Win32_Security","Win32_Storage_FileSystem","Win32_System_Console"]
[profile.release]
panic = "abort"
lto = true
opt-level = 3
