[package]
name = "scale"
version = "0.1.0"
edition = "2021"
authors = ["Chord"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
object = "0.38.0"
color-eyre = "0.6"
thiserror = "2"
lazy-regex = "3"
tracing = "0.1"
tracing-subscriber = {version = "0",features = ["local-time"]}
clap  = {version = "4.5", features = ["derive"]}
rand = "0.9.0"
serde = {version = "1", optional = true, features = ["derive"]}
serde_json = "1"
serde_yaml = "0.9"
#msvc-demangler = "0.11"
[features]
default = ["serde"]
serde = ["dep:serde"]
[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = ["Win32_Security","Win32_Storage_FileSystem","Win32_System_Console","Win32_System_Memory"]
[profile.release]
panic = "abort"
lto = true
opt-level = 3
